Create Text vectorizer

--- a/PubMed_200k_RCT.ipynb
+++ b/PubMed_200k_RCT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPzMMdRzdo6ROmZoNzO99/S",
+      "authorship_tag": "ABX9TyMyQ99vViowSh28VsJuOcaG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1285,10 +1285,99 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Create Text vectorizer"
+      ],
+      "metadata": {
+        "id": "NeI18ni6iBSo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_tokens = 68000 ## according to paper"
+      ],
+      "metadata": {
+        "id": "hgDsaBrSkPse"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.layers import TextVectorization\n",
+        "\n",
+        "text_vectorizer = TextVectorization(max_tokens = max_tokens,\n",
+        "                                    output_sequence_length =output_sec_len)\n",
+        "text_vectorizer"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Nc8FwmMkUOf",
+        "outputId": "01f4912d-5278-4785-d887-0829e8b5121e"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.layers.preprocessing.text_vectorization.TextVectorization at 0x7ff5cd9ad810>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text_vectorizer.adapt(train_sentences)"
+      ],
+      "metadata": {
+        "id": "PLcxf5-Qk8aJ"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rct_20k_text_vocab = text_vectorizer.get_vocabulary()\n",
+        "print(f\"Number of words in vocabulary: {len(rct_20k_text_vocab)}\"), \n",
+        "print(f\"Most common words in the vocabulary: {rct_20k_text_vocab[:5]}\")\n",
+        "print(f\"Least common words in the vocabulary: {rct_20k_text_vocab[-5:]}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kvOvs9dolTV8",
+        "outputId": "668e581e-0d4b-4d75-897c-0be4f0da918c"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of words in vocabulary: 64841\n",
+            "Most common words in the vocabulary: ['', '[UNK]', 'the', 'and', 'of']\n",
+            "Least common words in the vocabulary: ['aainduced', 'aaigroup', 'aachener', 'aachen', 'aaacp']\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "NeI18ni6iBSo"
+        "id": "p5KsegX_leYJ"
       },
       "execution_count": null,
       "outputs": []
